<resources>
    <string name="app_name">TrabajoFinalMoviles</string>
    <string name="cargar_rodeo">Cargar Rodeo</string>
    <string name="cargar_vaca">Cargar Vaca</string>
    <string name="consutar_rodeo">Consutar Rodeo</string>
    <string name="consultar_vaca">Consultar Vaca</string>
    <string name="cargar_alerta_de_vaca">Cargar Alerta de Vaca</string>
    <string name="cargar_alerta_de_rodeo">Cargar Alerta de Rodeo</string>
    <string name="generar_bsc">Generar BSC</string>
    <string name="cargar">Cargar</string>
    <string name="location">Location :</string>


    <!--Pickers-->
    <string name="titlulo_pickers">Obtener fecha y hora</string>

    <string name="formato_fecha">dd/mm/yyyy</string>
    <string name="formato_hora">hh:mm</string>
</resources>
