<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4E4848"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/addHerd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#4CAF50"
                    android:onClick="addHerd"
                    android:text="@string/cargar_rodeo" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/addCow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#4CAF50"
                    android:onClick="addCow"
                    android:text="@string/cargar_vaca" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/getRodeo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#4CAF50"
                    android:onClick="getHerd"
                    android:text="@string/consutar_rodeo" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/getCow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#4CAF50"
                    android:onClick="getCow"
                    android:text="@string/consultar_vaca" />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/addCowAllert"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#4CAF50"
                    android:text="@string/cargar_alerta_de_vaca" />

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/addHerdAlert"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#4CAF50"
                    android:text="@string/cargar_alerta_de_rodeo"
                    android:onClick="addHerdAlert"/>

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/generateBCS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#4CAF50"
                    android:onClick="generacionBcs" android:text="@string/generar_bsc"/>

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/setterUrl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#4CAF50"
                    android:onClick="setUrl"
                    android:text="Configurar URL" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_vertical"
                    android:gravity="bottom"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView22"
                        android:layout_width="match_parent"
                        android:layout_height="126dp" />

                    <Button
                        android:id="@+id/quit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#C62828"
                        android:onClick="exit"
                        android:text="SALIR" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>